[project]
name = "택배비서"
version = "0.1.0"
description = "택배 추적부터 문제 해결까지, AI가 알아서 챙겨주는 스마트 배송 비서"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
trackmate = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
